RAIN-1470 : PT Apk css issue fixes  (#1952)
* RAIN-1470 : PT-Mutation Apk Misalignment Issues fix

* RAIN-1470 : PT Apk Issue for Table Misalignment fix

* RAIN-1470 : PT APK issue fix for Search Preview screen

* RAIN-1470 : PT APK issue fix for PT Create acknowledgement alignment

* RAIN-1470 : PT Mutation Apply screen apk issue fix

* RAIN-1470 : PT Assess Year Popup Apk issue fix

--- a/frontend/old-ui/web/rainmaker/dev-packages/egov-pt-dev/src/ui-molecules-local/Table/index.scss
+++ b/frontend/old-ui/web/rainmaker/dev-packages/egov-pt-dev/src/ui-molecules-local/Table/index.scss
@@ -26,16 +26,30 @@ table {
     tbody {
       tr {
         td {
-          width: 50% !important;
+          width: 45% !important;
           padding: 4px 8px 4px 10px !important;
-          font-size: 14px !important;
+          font-size: 13px !important;
           height: auto !important;
-          white-space: pre-wrap !important;
-          border-bottom: none !important;
+          text-overflow: ellipsis!important;
+          white-space: nowrap!important;
+          overflow: hidden!important;
+          p{
+   
+            margin: 0px !important;
+          }
+          div 
+          {
+            a{
+  
+            font-size: 11px !important;
+            }
+          }
         }
+
       }
     }
   }
+
 }
 @media only screen and (max-width: 960px) {
   table {
